# Fetech

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
capabilities/: manifest.yaml
deploy/systemd/: fetech.service.example
docs/: architecture.md  capability-catalog.md  competitor-matrix.md  deployment-containment.md  extraction-provenance.md  security-threat-model.md  v0.2-conformance.md  v0.3-authentication-foundation.md  v0.4-conformance.md
docs/adr/: 0001-polyglot-logic-backends.md
docs/releases/: v0.3.0a0.md  v0.4.0a0.md
release/: dependency-licenses-0.4.0a0-candidate.md  dependency-licenses-v0.4-development.md  dependency-licenses.md  fetech-0.3.0a0.spdx.json  fetech-0.4.0a0-candidate.spdx.json  fetech-v0.4-development.spdx.json  fetech-v0.4-docling-development-smoke.json  fetech-v0.4-docling-wheel-smoke.json  fetech-v0.4-readiness.json
scripts/: check_v04_release_readiness.py  collect_v04_smoke_evidence.py  generate_release_evidence.py  provision_docling_artifacts.py  release_license_catalog.toml  release_published.toml  release_v04_candidate.toml  release_v04_development.toml  verify_v04_release_artifacts.py
src/fetech/: __init__.py  archive_worker.py  auth.py  (+36 more)
tests/: test_docling_artifacts.py  test_enma_invariants.py  test_http_adapter.py  test_logic_backends.py  test_network_scheduling.py  test_pinned_transport.py  test_release_evidence.py  test_release_readiness.py  test_runtime_conformance.py  test_storage_cas.py  test_systemd_unit.py  test_v01_conformance.py  test_v02_browser.py  test_v02_conformance.py  test_v02_discovery.py  test_v02_interfaces.py  test_v02_variants.py  test_v03_api.py  test_v03_auth.py  test_v03_auth_flows.py  test_v03_capability_matrix.py  test_v03_integration.py  test_v03_interfaces.py  test_v03_login_cookie_handoff.py  test_v03_runtime_regressions.py  test_v03_security_regressions.py  test_v03_session_connector.py  test_v04_budget_accounting.py  test_v04_cache_archives.py  test_v04_cache_expiry_provenance.py  test_v04_capability_matrix.py  test_v04_docling.py  test_v04_document_providers_integration.py  test_v04_documents.py  test_v04_integration.py  test_v04_interfaces.py  test_v04_media.py  test_v04_planning.py  test_v04_release_artifacts.py  test_v04_smoke_evidence.py  (+5 more)
(+25 files in other folders)
