[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fetech"
version = "0.1.0a0"
description = "Policy-aware universal agentic content-acquisition runtime"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Fetech contributors" }]
keywords = ["fetch", "crawler", "agent", "mcp", "provenance", "graph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiosqlite>=0.20",
  "httpx[http2]>=0.28",
  "pydantic>=2.10",
  "PyYAML>=6.0",
  "sqlalchemy[asyncio]>=2.0",
  "typer>=0.15",
]

[project.optional-dependencies]
web = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "readability-lxml>=0.8.1",
  "trafilatura>=2.0",
]
server = ["fastapi>=0.115", "uvicorn>=0.34"]
mcp = ["mcp>=1.10"]
logic = ["clingo>=5.7,<6"]
browser = ["playwright>=1.50", "selenium>=4.28"]
documents = [
  "openpyxl>=3.1",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "python-pptx>=1.0",
]
media = ["pillow>=11.0", "yt-dlp>=2025.1"]
dev = [
  "coverage>=7.6",
  "mypy>=1.14",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
  "types-PyYAML>=6.0",
  "types-openpyxl>=3.1",
]
all = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "readability-lxml>=0.8.1",
  "trafilatura>=2.0",
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "mcp>=1.10",
  "clingo>=5.7,<6",
  "playwright>=1.50",
  "selenium>=4.28",
  "openpyxl>=3.1",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "pillow>=11.0",
  "yt-dlp>=2025.1",
]

[project.scripts]
fetech = "fetech.cli:app"
fetech-daemon = "fetech.daemon:main"
fetech-context-mcp = "fetech.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fetech"]

[tool.hatch.build.targets.wheel.force-include]
"capabilities/manifest.yaml" = "fetech/data/manifest.yaml"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["fetech"]
exclude = ["tests"]
